2011-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/47364
	* config/i386/i386.md (strlen<mode>): Replace SWI48x with P.

2011-07-28  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2011-07-26  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (tree_non_mode_aligned_mem_p): Strip conversions and
	return false for invariants.

2011-07-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/49866
	* config/i386/i386.md (*call_pop_1_vzeroupper, *call_pop_1,
	*sibcall_pop_1_vzeroupper, *sibcall_pop_1, *call_1_vzeroupper,
	*call_1, *sibcall_1_vzeroupper, *sibcall_1, *call_1_rex64_vzeroupper,
	*call_1_rex64, *call_1_rex64_ms_sysv_vzeroupper,
	*call_1_rex64_ms_sysv, *sibcall_1_rex64_vzeroupper,
	*sibcall_1_rex64, *call_value_pop_1_vzeroupper,
	*call_value_pop_1, *sibcall_value_pop_1_vzeroupper,
	*sibcall_value_pop_1, *call_value_1_vzeroupper,
	*call_value_1, *sibcall_value_1_vzeroupper,
	*sibcall_value_1, *call_value_1_rex64_vzeroupper,
	*call_value_1_rex64, *call_value_1_rex64_ms_sysv_vzeroupper,
	*call_value_1_rex64_ms_sysv, *sibcall_value_1_rex64_vzeroupper,
	*sibcall_value_1_rex64): Use z constraint instead of s constraint.

	Backport from mainline
	2011-05-16  Uros Bizjak  <ubizjak@gmail.com>
        
        * config/i386/constraints.md (z): New constraint.

2011-07-25  Andrew Pinski  <apinski@cavium.com>

	PR tree-opt/49671
	* tree-inline.c (remap_gimple_op_r): Copy TREE_THIS_VOLATILE and
	TREE_THIS_NOTRAP into the inner most MEM_REF.
	Always copy TREE_THIS_VOLATILE.
	* tree-sra.c (ptr_parm_has_direct_uses): Check that the lhs, rhs and
	arguments are not volatile references.

2011-07-25  Georg-Johann Lay  <avr@gjlay.de>
	
	PR target/39386
	Backport from mainline r176756
	2011-07-25  Georg-Johann Lay
	* config/avr/avr.c (out_shift_with_cnt): Use tmp_reg as
	shift counter for x << x and x >> x shifts.

2011-07-22  Uros Bizjak  <ubizjak@gmail.com>
